[package]
name = "enzyme-substreams-vaults"
version = "0.1.0"
description = "Enzyme substreams modules for basic vault data"
edition = "2021"
repository = "https://github.com/enzymefinance/enzyme-substreams"
license = "Apache 2.0"

[lib]
name = "vaults"
crate-type = ["cdylib"]

[dependencies]
ethabi = "18"
hex-literal = "0.3.4"
num-bigint = "0.4.3"
prost = "0.11"
substreams.workspace = true
substreams-ethereum.workspace = true

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum.workspace = true

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
